--- a/style.css
+++ b/style.css
@@ -47,12 +47,17 @@ p {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	flex-wrap: wrap;
 }
 
 
 .logo {
 	letter-spacing: 5px;
 	font-size: 1.3em;
+}
+
+.menu-icon {
+	display: none;
 }
 
 .navigation ul {
@@ -81,4 +86,46 @@ p {
 	background: #f2f2f2;
 	text-align: center;
 	margin-top: 4rem;
+}
+
+
+
+
+
+@media only screen and (max-width: 767px) {
+
+	.menu-icon {
+		display: block;
+		cursor: pointer;
+		padding: 0.5rem 1rem;
+	}
+
+	.navigation {
+		width: 100%;
+		margin-top: 1rem;
+	}
+
+	.navigation ul {
+		display: none;
+	}
+
+	.navigation ul.show {
+		display: block;
+	}
+
+		.navigation ul li {
+			display: block;
+		}
+
+			.navigation ul li a {
+				display: block;
+				padding: 0.5rem 0rem;
+				transition: all 0.3s linear;
+				border-radius: 5px;
+			}
+
+				.navigation ul li a:hover {
+					background: #555;
+				}
+
 }
